<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="string_brackets">( )</string>
    <string name="string_divide">/</string>
    <string name="string_equals">=</string>
    <string name="string_multipy">x</string>
    <string name="string_plus">+</string>
    <string name="string_subtract">-</string>
    <string name="delete">Delete</string>
</resources>