<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider_view">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="= 50"
            android:text="@string/_0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/divider_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/divider_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent">
<!--        7, 8, 9, +       -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/button_7"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_7"
            android:id="@+id/button_8"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_8"
            android:id="@+id/button_9"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_plus"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_9"
            android:id="@+id/button_plus"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="VisualLintBounds" />
<!--        4, 5, 6, -       -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/button_4"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_8"
            app:layout_constraintStart_toEndOf="@id/button_4"
            android:id="@+id/button_5"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_9"
            app:layout_constraintStart_toEndOf="@id/button_5"
            android:id="@+id/button_6"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_subtract"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_plus"
            app:layout_constraintStart_toEndOf="@id/button_6"
            android:id="@+id/button_subtract"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="VisualLintBounds" />
<!--        1, 2, 3, *       -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/button_1"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_5"
            app:layout_constraintStart_toEndOf="@id/button_7"
            android:id="@+id/button_2"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_6"
            app:layout_constraintStart_toEndOf="@id/button_2"
            android:id="@+id/button_3"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_multipy"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_subtract"
            app:layout_constraintStart_toEndOf="@id/button_3"
            android:id="@+id/button_multiply"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="VisualLintBounds" />
<!--        (), 0, =, /      -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_brackets"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/button_brackets"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintStart_toEndOf="@id/button_brackets"
            android:id="@+id/button_0"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_equals"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_3"
            app:layout_constraintStart_toEndOf="@id/button_0"
            android:id="@+id/button_equals"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_divide"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_multiply"
            app:layout_constraintStart_toEndOf="@id/button_equals"
            android:id="@+id/button_divide"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="VisualLintBounds" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_divide"
            app:layout_constraintStart_toEndOf="@id/button_0"
            android:id="@+id/button_delete"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/button_equals"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/button_clear"
            android:layout_marginHorizontal="5dp"
            android:textSize="30sp"
            tools:ignore="VisualLintBounds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>